--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/test_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/post_list_swipe_refresh_layout"
         android:layout_width="match_parent"
@@ -17,5 +23,6 @@
             android:scrollbars="vertical"
             app:layoutManager="LinearLayoutManager" />
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
