--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,10 +10,25 @@
     android:paddingTop="@dimen/list_item_vertical_padding">
 
     <TextView
-        android:textAppearance="?android:textAppearanceMedium"
         android:id="@+id/item_post_title"
+        android:maxWidth="250dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:textColor="@android:color/black"
         tools:text="The best Reddit post ever" />
+
+    <android.support.v4.widget.Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/item_post_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textAppearance="?android:textAppearanceSmall"
+        tools:text="1203412341" />
 
 </LinearLayout>
