--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:elevation="4dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/list_item_vertical_padding"
-    android:paddingEnd="@dimen/list_item_horizontal_padding"
-    android:paddingStart="@dimen/list_item_horizontal_padding"
-    android:paddingTop="@dimen/list_item_vertical_padding">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/item_post_title"
-        android:maxWidth="250dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@android:color/black"
-        tools:text="The best Reddit post ever" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/list_item_vertical_padding"
+        android:paddingEnd="@dimen/list_item_horizontal_padding"
+        android:paddingStart="@dimen/list_item_horizontal_padding"
+        android:paddingTop="@dimen/list_item_vertical_padding">
 
-    <android.support.v4.widget.Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        <TextView
+            android:id="@+id/item_post_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="250dp"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@android:color/black"
+            tools:text="The best Reddit post ever" />
 
-    <TextView
-        android:id="@+id/item_post_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textAppearance="?android:textAppearanceSmall"
-        tools:text="1203412341" />
+        <android.support.v4.widget.Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/item_post_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textAppearance="?android:textAppearanceSmall"
+            tools:text="1203412341" />
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
