Add actual layout files for posts.

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,43 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:elevation="4dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp"
+    app:cardCornerRadius="0dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/list_item_vertical_padding"
-        android:paddingEnd="@dimen/list_item_horizontal_padding"
-        android:paddingStart="@dimen/list_item_horizontal_padding"
-        android:paddingTop="@dimen/list_item_vertical_padding">
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:elevation="8dp"
+        android:focusable="true">
 
-        <TextView
-            android:id="@+id/item_post_title"
+        <ImageView
+            android:id="@+id/post_image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/item_post_content_meat"
+            android:layout_alignTop="@+id/item_post_content_meat"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:maxWidth="80dp"
+            android:src="@drawable/test_reddit_image" />
+
+        <RelativeLayout
+            android:id="@+id/item_post_content_meat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxWidth="250dp"
-            android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@android:color/black"
-            tools:text="The best Reddit post ever" />
+            android:layout_toEndOf="@id/post_image"
+            android:orientation="vertical"
+            android:paddingBottom="8dp"
+            android:paddingTop="@dimen/list_item_vertical_padding">
 
-        <android.support.v4.widget.Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            <TextView
+                android:id="@+id/item_post_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="230dp"
+                android:paddingStart="16dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/primary_dark"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                tools:ignore="RtlSymmetry"
+                tools:text="My test post title that a a a a a a a a a" />
 
-        <TextView
-            android:id="@+id/item_post_time"
+            <TextView
+                android:id="@+id/item_post_subreddit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@id/item_post_title"
+                android:layout_below="@id/item_post_title"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:maxWidth="230dp"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textStyle="italic"
+                tools:text="/r/leagueoflegends" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:textAppearance="?android:textAppearanceSmall"
-            tools:text="1203412341" />
+            android:layout_alignBottom="@+id/item_post_content_meat"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/item_post_content_meat"
+            android:layout_centerVertical="true"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center_vertical"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/item_post_comment_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/comment_multiple_outline" />
+
+            <TextView
+                android:id="@+id/item_post_comment_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/item_post_comment_icon"
+                android:layout_centerHorizontal="true"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"
+                tools:text="230" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
