--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="primary_dark">#455A64</color>
     <color name="primary_light">#CFD8DC</color>
     <color name="accent">#03A9F4</color>
+
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+
+    <color name="secondary_background_gray">#F5F5F5</color>
 </resources>
