--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/post_list_swipe_refresh_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/post_list_recycler_view"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/post_list_swipe_refresh_layout"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/post_list_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                app:layoutManager="LinearLayoutManager" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            app:layoutManager="LinearLayoutManager" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            app:fab_icon="@drawable/eye_white" />
 
-    <uk.co.markormesher.android_fab.FloatingActionButton
-        android:id="@+id/fab"
-        app:buttonIcon="@drawable/eye_white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
