--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,130 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="8dp">
-
-    <LinearLayout
+<layout>
+    <data>
+        <variable
+            name="postData"
+            type="com.jollyremedy.notreddit.models.post.PostData" />
+    </data>
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="8dp">
 
-        <!-- Top row -->
         <LinearLayout
-            android:minHeight="70dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical">
 
-            <!-- Thumbnail -->
-            <ImageView
-                android:id="@+id/item_post_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:maxWidth="70dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/test_reddit_image" />
-
-            <!-- Title -->
-            <TextView
-                android:id="@+id/item_post_title"
-                android:layout_width="wrap_content"
+            <!-- Top row -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:maxWidth="220dp"
-                android:paddingBottom="@dimen/default_gap"
-                android:paddingTop="@dimen/default_gap"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/primary_dark"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                tools:ignore="RtlSymmetry"
-                tools:text="My test post title test post title test post title test post title test post title" />
-
-            <android.support.v4.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-
-            <!-- Comment bubble/count wrapper -->
-            <RelativeLayout
-                android:id="@+id/item_post_comment_views_wrapper"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
                 android:gravity="center_vertical"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp">
+                android:minHeight="70dp"
+                android:orientation="horizontal">
 
-                <!-- Comment bubble -->
+                <!-- Thumbnail -->
                 <ImageView
-                    android:id="@+id/item_post_comment_icon"
+                    android:id="@+id/item_post_image"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/default_gap"
-                    android:paddingBottom="2dp"
-                    android:src="@drawable/comment_multiple_outline" />
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:maxWidth="70dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/test_reddit_image" />
 
-                <!-- Comment count -->
+                <!-- Title -->
                 <TextView
-                    android:id="@+id/item_post_comment_count"
+                    android:id="@+id/item_post_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/item_post_comment_icon"
-                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="16dp"
+                    android:maxWidth="220dp"
+                    android:paddingBottom="@dimen/default_gap"
+                    android:paddingTop="@dimen/default_gap"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:text="@{postData.title}"
+                    tools:ignore="RtlSymmetry"
+                    tools:text="My test post title test post title test post title test post title test post title" />
+
+                <android.support.v4.widget.Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <!-- Comment bubble/count wrapper -->
+                <RelativeLayout
+                    android:id="@+id/item_post_comment_views_wrapper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp">
+
+                    <!-- Comment bubble -->
+                    <ImageView
+                        android:id="@+id/item_post_comment_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginBottom="@dimen/default_gap"
+                        android:paddingBottom="2dp"
+                        android:src="@drawable/comment_multiple_outline" />
+
+                    <!-- Comment count -->
+                    <TextView
+                        android:id="@+id/item_post_comment_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/item_post_comment_icon"
+                        android:layout_centerHorizontal="true"
+                        android:textAppearance="?android:textAppearanceSmall"
+                        android:textColor="@android:color/black"
+                        android:text="@{@string/item_post_comment_count(postData.commentCount)}"
+                        android:textSize="10sp"
+                        tools:text="230" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <!-- Bottom row -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/secondary_background_gray"
+                android:orientation="horizontal"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp">
+
+                <!-- Subreddit -->
+                <TextView
+                    android:id="@+id/item_post_subreddit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/default_gap"
+                    android:paddingStart="@dimen/default_gap"
                     android:textAppearance="?android:textAppearanceSmall"
+                    android:text="@{postData.subreddit}"
                     android:textColor="@android:color/black"
-                    android:textSize="10sp"
-                    tools:text="230" />
-            </RelativeLayout>
+                    android:textSize="12sp"
+                    tools:text="leagueoflegends" />
+
+                <!-- Domain (i.reddit.com, imgur.com, etc.) -->
+                <TextView
+                    android:id="@+id/item_post_domain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/default_gap"
+                    android:paddingStart="@dimen/default_gap"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    android:text="@{postData.domain}"
+                    tools:text="i.reddit.com" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-        <!-- Bottom row -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/secondary_background_gray"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/default_gap"
-            android:paddingTop="@dimen/default_gap">
-
-            <!-- Subreddit -->
-            <TextView
-                android:id="@+id/item_post_subreddit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/default_gap"
-                android:paddingStart="@dimen/default_gap"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textColor="@android:color/black"
-                android:textSize="12sp"
-                tools:text="leagueoflegends" />
-
-            <!-- Domain (i.reddit.com, imgur.com, etc.) -->
-            <TextView
-                android:id="@+id/item_post_domain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/default_gap"
-                android:paddingStart="@dimen/default_gap"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textSize="12sp"
-                android:textStyle="italic"
-                tools:text="(i.reddit.com)" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</layout>
