--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="postData"
             type="com.jollyremedy.notreddit.models.post.PostData" />
     </data>
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
@@ -19,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackground"
+            android:clickable="true"
             android:orientation="vertical">
 
             <!-- Top row -->
@@ -48,11 +52,11 @@
                     android:maxWidth="220dp"
                     android:paddingBottom="@dimen/default_gap"
                     android:paddingTop="@dimen/default_gap"
+                    android:text="@{postData.title}"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/primary_dark"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    android:text="@{postData.title}"
                     tools:ignore="RtlSymmetry"
                     tools:text="My test post title test post title test post title test post title test post title" />
 
@@ -90,9 +94,9 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/item_post_comment_icon"
                         android:layout_centerHorizontal="true"
+                        android:text="@{@string/item_post_comment_count(postData.commentCount)}"
                         android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@android:color/black"
-                        android:text="@{@string/item_post_comment_count(postData.commentCount)}"
                         android:textSize="10sp"
                         tools:text="230" />
                 </RelativeLayout>
@@ -115,8 +119,8 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
-                    android:textAppearance="?android:textAppearanceSmall"
                     android:text="@{postData.subreddit}"
+                    android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="@android:color/black"
                     android:textSize="12sp"
                     tools:text="leagueoflegends" />
@@ -128,10 +132,10 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
+                    android:text="@{postData.domain}"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textSize="12sp"
                     android:textStyle="italic"
-                    android:text="@{postData.domain}"
                     tools:text="i.reddit.com" />
 
             </LinearLayout>
