--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
-            name="postData"
-            type="com.jollyremedy.notreddit.models.post.PostData" />
+            name="post"
+            type="com.jollyremedy.notreddit.models.post.Post" />
+        <variable
+            name="postClickedCallback"
+            type="com.jollyremedy.notreddit.ui.postlist.PostAdapter.PostClickedCallback" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -23,6 +25,8 @@
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{(v) -> postClickedCallback.onPostClicked(post)}"
             android:orientation="vertical">
 
             <!-- Top row -->
@@ -52,7 +56,7 @@
                     android:maxWidth="220dp"
                     android:paddingBottom="@dimen/default_gap"
                     android:paddingTop="@dimen/default_gap"
-                    android:text="@{postData.title}"
+                    android:text="@{post.getData().title}"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/primary_dark"
                     android:textSize="15sp"
@@ -94,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/item_post_comment_icon"
                         android:layout_centerHorizontal="true"
-                        android:text="@{@string/item_post_comment_count(postData.commentCount)}"
+                        android:text="@{@string/item_post_comment_count(post.getData().commentCount)}"
                         android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@android:color/black"
                         android:textSize="10sp"
@@ -119,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
-                    android:text="@{postData.subreddit}"
+                    android:text="@{post.getData().subreddit}"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="@android:color/black"
                     android:textSize="12sp"
@@ -132,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
-                    android:text="@{postData.domain}"
+                    android:text="@{post.getData().domain}"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textSize="12sp"
                     android:textStyle="italic"
