--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/post_detail_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <data>
 
-</LinearLayout>
+        <variable
+            name="post"
+            type="com.jollyremedy.notreddit.models.post.Post" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <org.sufficientlysecure.htmltextview.HtmlTextView
+            android:id="@+id/post_detail_post_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:html="@{post.getData().getSelfTextHtml()}" />
+
+    </LinearLayout>
+
+</layout>
