--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -56,7 +56,7 @@
                     android:maxWidth="220dp"
                     android:paddingBottom="@dimen/default_gap"
                     android:paddingTop="@dimen/default_gap"
-                    android:text="@{post.getData().title}"
+                    android:text="@{post.data.title}"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="@color/primary_dark"
                     android:textSize="15sp"
@@ -98,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/item_post_comment_icon"
                         android:layout_centerHorizontal="true"
-                        android:text="@{@string/item_post_comment_count(post.getData().commentCount)}"
+                        android:text="@{@string/item_post_comment_count(post.data.commentCount)}"
                         android:textAppearance="?android:textAppearanceSmall"
                         android:textColor="@android:color/black"
                         android:textSize="10sp"
@@ -123,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
-                    android:text="@{post.getData().subreddit}"
+                    android:text="@{post.data.subreddit}"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="@android:color/black"
                     android:textSize="12sp"
@@ -136,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/default_gap"
                     android:paddingStart="@dimen/default_gap"
-                    android:text="@{post.getData().domain}"
+                    android:text="@{post.data.domain}"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textSize="12sp"
                     android:textStyle="italic"
