--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -37,13 +37,45 @@
                 android:minHeight="70dp"
                 android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingEnd="6dp"
+                    android:paddingStart="4dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:src="@drawable/upvote" />
+
+                    <TextView
+                        android:id="@+id/item_post_score"
+                        android:text="@{post.data.score}"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="10009" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:src="@drawable/downvote" />
+
+                </LinearLayout>
                 <!-- Thumbnail -->
                 <ImageView
                     android:id="@+id/item_post_image"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    android:maxWidth="70dp"
+                    android:maxWidth="65dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/test_reddit_image" />
 
@@ -52,8 +84,8 @@
                     android:id="@+id/item_post_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:maxWidth="220dp"
+                    android:layout_marginStart="12dp"
+                    android:maxWidth="180dp"
                     android:paddingBottom="@dimen/default_gap"
                     android:paddingTop="@dimen/default_gap"
                     android:text="@{post.data.title}"
