--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,17 +10,30 @@
             type="com.jollyremedy.notreddit.models.post.Post" />
     </data>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <org.sufficientlysecure.htmltextview.HtmlTextView
-            android:id="@+id/post_detail_post_body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:html="@{post.data.selfTextHtml}" />
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp">
 
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/default_gap"
+                    android:scrollbars="vertical">
 
+                    <org.sufficientlysecure.htmltextview.HtmlTextView
+                        android:id="@+id/post_detail_post_body"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:html="@{post.data.selfTextHtml}" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 </layout>
