--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -10,9 +10,15 @@
             type="com.jollyremedy.notreddit.models.post.Post" />
     </data>
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -23,8 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:padding="@dimen/default_gap"
-                    android:scrollbars="vertical">
+                    android:padding="@dimen/default_gap">
 
                     <org.sufficientlysecure.htmltextview.HtmlTextView
                         android:id="@+id/post_detail_post_body"
@@ -36,4 +41,5 @@
 
             </android.support.v7.widget.CardView>
         </LinearLayout>
+    </ScrollView>
 </layout>
