--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="postDetailViewModel"
+            type="com.jollyremedy.notreddit.ui.postdetail.PostDetailViewModel" />
         <variable
             name="post"
             type="com.jollyremedy.notreddit.models.post.Post" />
+        <import type="android.view.View" />
     </data>
 
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nested"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
@@ -26,6 +30,7 @@
                 layout="@layout/item_post" />
 
             <android.support.v7.widget.CardView
+                android:visibility="@{postDetailViewModel.shouldShowPostCard(post) ? View.VISIBLE : View.GONE}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp">
@@ -53,5 +58,5 @@
 
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </layout>
