Begin work on displaying all comments for a post.

--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -13,8 +13,8 @@
         <import type="android.view.View" />
     </data>
 
-
     <android.support.v4.widget.NestedScrollView
+        android:background="@android:color/white"
         android:id="@+id/nested"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
