--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -8,25 +9,76 @@
             type="com.jollyremedy.notreddit.models.comment.Comment" />
     </data>
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
+        android:id="@+id/item_comment_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="2dp">
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="5dp"
+            android:background="@color/secondary_background_gray"
+            android:layout_height="match_parent" />
 
         <LinearLayout
+            android:id="@+id/item_comment_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:orientation="vertical"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp"
+            app:cardCornerRadius="0dp">
 
-            <TextView
-                android:id="@+id/item_comment_body"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@{comment.data.body}" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/default_gap">
+
+                    <org.sufficientlysecure.htmltextview.HtmlTextView
+                        android:id="@+id/item_comment_body"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:html="@{comment.data.bodyHtml}"
+                        tools:text="This game is literally the Dark Souls of Monster Hunter 2D paltformers." />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingEnd="4dp"
+                    android:paddingStart="4dp"
+                    android:paddingTop="2dp">
+
+                    <android.support.v4.widget.Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/item_comment_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{comment.data.author}"
+                        android:textColor="@color/accent"
+                        tools:text="Spitsonpuppies" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/item_comment_more_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MORE" />
+
+    </LinearLayout>
 </layout>
