Make comments look pretty.

--- a/app/src/main/res/layout/comment_vertical_divider_gray.xml
+++ b/app/src/main/res/layout/comment_vertical_divider_gray.xml
@@ -2,4 +2,4 @@
     android:layout_width=".35dp"
     android:layout_height="match_parent"
     android:layout_marginStart="10dp"
-    android:background="@color/accent" />
+    android:background="@android:color/darker_gray" />
