--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -9,94 +9,108 @@
             type="com.jollyremedy.notreddit.models.comment.Comment" />
     </data>
 
-    <!-- The parent wrapper -->
     <LinearLayout
-        android:id="@+id/item_comment_parent"
+        android:id="@+id/item_comment_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <!-- The card itself -->
-        <android.support.v7.widget.CardView
-            android:id="@+id/item_comment_card"
+        <!-- Programmatically add vertical lines here as necessary to show depth -->
+
+        <LinearLayout
+            android:id="@+id/item_comment_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="1dp"
             android:orientation="vertical"
-            app:cardCornerRadius="0dp">
+            tools:ignore="UselessParent">
 
-            <!-- The card's internal layout -->
+            <!-- Top line of the card -->
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/default_gap"
+                android:paddingTop="@dimen/default_gap">
+
+                <TextView
+                    android:id="@+id/item_comment_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:text="@{comment.data.author}"
+                    android:textAlignment="center"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    tools:text="Spitsonpuppies" />
+
+                <ImageView
+                    android:layout_width="4dp"
+                    android:layout_height="4dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginStart="6dp"
+                    android:src="@drawable/circle_edge" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{@string/item_comment_points(comment.data.points)}"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:layout_width="4dp"
+                    android:layout_height="4dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginStart="6dp"
+                    android:src="@drawable/circle_edge" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3h ago"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <!-- The comment body / author / etc for an actual content (not a MORE) -->
+            <LinearLayout
+                android:id="@+id/item_comment_actual_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <!-- The comment body / author / etc for an actual content (not a MORE) -->
-                <LinearLayout
-                    android:id="@+id/item_comment_actual_content"
-                    android:layout_width="match_parent"
+                <org.sufficientlysecure.htmltextview.HtmlTextView
+                    android:id="@+id/item_comment_body"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <org.sufficientlysecure.htmltextview.HtmlTextView
-                        android:id="@+id/item_comment_body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        app:html="@{comment.data.bodyHtml}"
-                        tools:text="This game is literally the Dark Souls of Monster Hunter 2D paltformers." />
-
-                    <!-- Bottom line of the card for author -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginTop="8dp"
-                        android:background="@color/secondary_background_gray"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <android.support.v4.widget.Space
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <TextView
-                            android:id="@+id/item_comment_author"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:gravity="center_vertical"
-                            android:paddingTop="@dimen/default_gap"
-                            android:paddingBottom="@dimen/default_gap"
-                            android:paddingEnd="@dimen/default_gap"
-                            android:text="@{comment.data.author}"
-                            android:textAlignment="center"
-                            android:textColor="@android:color/black"
-                            tools:text="Spitsonpuppies" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <!-- The "MORE" section of the card, only visible in that exact situation -->
-                <LinearLayout
-                    android:id="@+id/item_comment_more_wrapper"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/default_gap"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/item_comment_more_text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="More"
-                        android:textColor="@color/accent" />
-                </LinearLayout>
+                    android:padding="8dp"
+                    android:textColor="@android:color/black"
+                    app:html="@{comment.data.bodyHtml}"
+                    tools:text="This game is literally the Dark Souls of Monster Hunter 2D platformers." />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
 
+            <!-- The "MORE" section of the card, only visible in that exact situation -->
+            <LinearLayout
+                android:id="@+id/item_comment_more_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/default_gap"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/item_comment_more_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="More"
+                    android:textColor="@color/accent" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
+
 </layout>
